# esp-http-server-credentials

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
html/: alert.html  component.mk  index.html
main/: CMakeLists.txt  main.c  wifi_manager.c
main/include/: wifi_manager.h
